--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git</title>
+    <title>git y github</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    
+<div class="container"></div>
+<h2>
+jsjsjsjs
+</h2>
+
 </body>
 </html>
