--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>git y github</title>
 </head>
 <body>
+    <header><h1>"header"</h1></header>
 <div class="container"></div>
 <h2>
 jsjsjsjs
+
 </h2>
 
 </body>
