--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>git y github</title>
 </head>
 <body>
-    <header><h1>"header"</h1></header>
+    <header><h1>"experimento"</h1></header>
 <div class="container"></div>
 <h2>
 jsjsjsjs
 
 </h2>
 
+<footer>lalallalalla</footer>
 </body>
 </html>
